# celery-rust-python-interop-demo

./: Cargo.toml  README.md  Taskfile.yml  celery_app.rs  docker-compose.yml  pyproject.toml
celery_demo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/: main.rs
