[package]
name = "celery_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
celery = "0.4.0-rcn.11"
env_logger = "0.9.3"
serde = "1.0.147"
structopt = "0.3.26"
tokio = {version="1.21.2", features=["full"]}
