[tool.poetry]
name = "celery-demo"
version = "0.1.0"
description = ""
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
readme = "README.md"
packages = [{include = "celery_demo"}]

[tool.poetry.dependencies]
python = ">=3.9"
Django = "^4.1.3"
celery = {extras = ["rabbitmq", "msgpack"], version = "^5.2.7"}
watchfiles = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
